fix: use custom scrollbar style

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -6,6 +6,25 @@ html {
   overflow-y: auto !important;
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--v-primary-base) var(--v-background-base);
+
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: var(--v-background-base);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--v-primary-base);
+    //border-radius: 20px;
+    //border: 3px solid var(--v-background-base);
+  }
+}
+
 main .row {
   margin: 0;
 }
